Replace unmodifiable wrapping to immutable collections